--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,4 +25,7 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run predeploy
-    - run: npm run deploy
+    - run: npm run deployGit
+    env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
