--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
     - uses: actions/checkout@v4
@@ -23,8 +23,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        
     - run: npm install
+      
     - run: npm run predeploy
-    - run: npm run deployGit
-    env:
+
+    - name: Deploy to GitHub Pages
+      run: npm run deployGit
+      env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
