--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "deployGit": "gh-pages -d dist -u \"github-actions-bot <github-actions[bot]@users.noreply.github.com>\""
+    "deployGit": "gh-pages -d dist -u 'GitHub Actions <actions@github.com>'"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
