--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,10 +25,9 @@ jobs:
         cache: 'npm'
         
     - run: npm install
-      
-    - run: npm run predeploy
-
+    - run: npm run build
     - name: Deploy to GitHub Pages
-      run: npm run deployGit
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: peaceiris/actions-gh-pages@v4
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
